--- a/style.css
+++ b/style.css
@@ -5,61 +5,66 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/*HEADER*/
+/*/////////////////////////////////HEADER////////////////////////////////////////*/
 
 header {
     background-color: #33383b88;
     width: 100vw;
     display: flex;
-    position: fixed;
+    position: absolute;
     height: 10vh;
-    
+
 
 
 
 }
+
 .header-nav {
     display: flex;
     display: row;
     align-items: center;
     justify-content: space-around;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 
 }
 
-nav {    
+nav {
     width: 30%;
     padding-top: 2%;
-    
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1000px;
+    overflow: hidden;
+
 }
+
 .logo-left {
     width: 50%;
 }
 
 .logo-left img {
     width: 30%;
-margin: 15px;
+    margin: 15px;
 }
 
 header nav li a {
     text-decoration: none;
     color: seashell;
     align-items: center;
-    
+    display: inline-block;
+    padding: 5px 0;
+    margin-right: 17px;
+    font-size: 17px;
+    font-weight: 300;
+    border-bottom: 3px solid transparent;
+
 }
 
-main {
-    background-image: url(/img/fondo.jpeg);
-    background-size: cover;
-    background-position: center;
-    
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  pointer-events: none;
-  overflow: hidden;
+header nav li a:hover {
+    border-bottom: 1px solid rgb(175, 174, 172);
+    transition: 0.6s;
+    text-decoration: none;
+    color: seashell;
 
 }
 
@@ -75,6 +80,64 @@ li {
 
 }
 
+/*/////////////////////////////////MAIN MENU////////////////////////////////////////*/
+
+.background {
+    background-image: url(/img/fondo.jpeg);
+    background-size: cover;
+    background-position: center;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    overflow: hidden;
+
+}
+
+.contenedor-principal {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.menu-principal {
+    width: 80%;
+    
+}
+
+.conteiner-menu {
+    width: 70vw;
+    background-color:  rgba(175, 174, 172, 0.671);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+}
+
+#second-row {
+    width: 100%;
+    justify-content: space-around;
+}
+
+.quantity {
+    width: 35%;
+}
+
+#second-row label {
+    align-content: center;
+    justify-items: center;
+    justify-content: center;
+
+}
+
+
+
+
 
 /* FOOTER*/
 
@@ -83,7 +146,7 @@ li {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
-    font: bold 16px sans-serif;
+    font: 16px sans-serif;
     text-align: left;
     padding: 50px 60px 40px;
     overflow: hidden;
