--- a/style.css
+++ b/style.css
@@ -135,11 +135,17 @@ li {
 
 }
 
+/*/////////////////////////////////CARDS////////////////////////////////////////*/
 
+.cards {
+padding: 30px;
 
+}
+.card-deck {
+    padding-bottom: 30px;
+}
 
-
-/* FOOTER*/
+/*///////////////////////////////// FOOTER///////////////////////////////////////////*/
 
 .footer-distributed {
     background: #444;
