--- a/style.css
+++ b/style.css
@@ -375,6 +375,14 @@ form {
 
 }
 
+.card:hover {
+   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.12);
+   background-color: rgba(65, 188, 225, 0.2);
+   size: 1.5;
+   transition: 0.2s linear;
+   
+}
+
 .card-deck {
     padding-bottom: 30px;
 }
@@ -384,6 +392,15 @@ form {
     object-fit: cover;
     object-position: center;
     
+}
+
+.card img:hover {
+       scale: 1.5;
+}
+.card-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 /*///////////////////////////////// FOOTER///////////////////////////////////////////*/
