--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ header nav li a:hover {
 /*/////////////////////////////////MAIN MENU////////////////////////////////////////*/
 
 .background {
-    background-image: url(/img/fondo.jpeg);
+    background-image: url(http://wind-inovasi.com/uploads/1/2/7/5/127541778/s632071759683992811_p1_i1_w2560.jpeg);
     background-size: cover;
     background-position: center;
     top: 0;
